--- a/vidqua/extra-pages/blanche.html
+++ b/vidqua/extra-pages/blanche.html
@@ -1,1 +1,22 @@
+<!DOCTYPE html>
+<html>
+<meta charset="UTF-8">
+<link rel="stylesheet" href="../css/vidtemplate1.css">
+<body>
+<div class="contenedor">
+    <img id="logo" src="../multimedia/1.jpg">
+    <h2 ><a class="font1" href="../index.php">Vidqua™</a></h2>
+    <input type="text" id="search" placeholder="Buscar en Vidqua">
+    <button>buscar</button>
+</div>
 
+<video id="v51" src="<?php echo $mivideo; ?>" controls></video>
+<h1 class="fontai1"><?php echo $mititulo; ?></h1>
+<h4 class="font2">Publicado por <?php echo $ilovemexico; ?> el <?php echo $mifecha; ?></h4>
+<button id="mostrarOcultar">Ver descripcion</button>
+<p id="texto"><?php echo $midescripcion; ?></p>
+<br>
+<h4 class="font1">Comentarios</h4>
+<script src="../javascript/descvid.js?=77dd"></script>
+</body>
+</html>
