--- a/vidqua/extra-pages/blanche.html
+++ b/vidqua/extra-pages/blanche.html
@@ -12,7 +12,7 @@
 
 <video id="v51" src="<?php echo $mivideo; ?>" controls></video>
 <h1 class="fontai1">Activité 2.3 Ma Maison</h1>
-<h4 class="font2">Publicado por <?php echo $ilovemexico; ?> el <?php echo $mifecha; ?></h4>
+<h4 class="font2">Publicado por ismael> el 21/10/2023</h4>
 <button id="mostrarOcultar">Ver descripcion</button>
 <p id="texto"><?php echo $midescripcion; ?></p>
 <br>
