--- a/vidqua/extra-pages/evdelectura.html
+++ b/vidqua/extra-pages/evdelectura.html
@@ -1,1 +1,22 @@
--
+<!DOCTYPE html>
+<html>
+<meta charset="UTF-8">
+<link rel="stylesheet" href="../css/vidtemplate1.css">
+<body>
+<div class="contenedor">
+    <img id="logo" src="../multimedia/1.jpg">
+    <h2 ><a class="font1" href="../index.php">Vidqua™</a></h2>
+    <input type="text" id="search" placeholder="Buscar en Vidqua">
+    <button>buscar</button>
+</div>
+
+<iframe src="https://drive.google.com/file/d/1I9GDttTY2hnvR4WFXmjWWCz" width="940" height="480" allow="autoplay"></iframe>
+<h1 class="fontai1">ev de lectura</h1>
+<h4 class="font2">Publicado por ismael el 07/11/2023</h4>
+<button id="mostrarOcultar">Ver descripcion</button>
+<p id="texto"><?php echo $midescripcion; ?></p>
+<br>
+<h4 class="font1">Comentarios</h4>
+<script src="../javascript/descvid.js?=77dd"></script>
+</body>
+</html>
