--- a/vidqua/extra-pages/evdelectura.html
+++ b/vidqua/extra-pages/evdelectura.html
@@ -10,8 +10,8 @@
     <button>buscar</button>
 </div>
 
-<iframe src="https://drive.google.com/file/d/1I9GDttTY2hnvR4WFXmjWWCz" width="940" height="480" allow="autoplay"></iframe>
-<h1 class="fontai1">ev de lectura</h1>
+<frame src="https://drive.google.com/file/d/1pH_gqZQbuGyUfVQY20muaNChanfwnZW/previe
+w" width="640" height="480" allow="autoplay"></frame><h1 class="fontai1">ev de lectura</h1>
 <h4 class="font2">Publicado por ismael el 07/11/2023</h4>
 <button id="mostrarOcultar">Ver descripcion</button>
 <p id="texto"><?php echo $midescripcion; ?></p>
