--- a/vidqua/extra-pages/evdelectura.html
+++ b/vidqua/extra-pages/evdelectura.html
@@ -10,8 +10,7 @@
     <button>buscar</button>
 </div>
 
-<frame src="https://drive.google.com/file/d/1pH_gqZQbuGyUfVQY20muaNChanfwnZW/previe
-w" width="640" height="480" allow="autoplay"></frame><h1 class="fontai1">ev de lectura</h1>
+citrame src="https://drive.google.com/file/d/1pH_gqZQbuGyUfVQY20muaNChanVfwnZW/preview" width="640" height="480" allow="autoplay"></iframe><h1 class="fontai1">ev de lectura</h1>
 <h4 class="font2">Publicado por ismael el 07/11/2023</h4>
 <button id="mostrarOcultar">Ver descripcion</button>
 <p id="texto"><?php echo $midescripcion; ?></p>
