--- a/vidqua/extra-pages/blanche.html
+++ b/vidqua/extra-pages/blanche.html
@@ -1,3 +1,3 @@
 <script>
-  window.location.replace("https://www.youtube.com/watch?v=dQw4w9WgXcQ");
+  window.location.replace("https://bit.ly/49TFB8b");
 </script>
