--- a/vidqua/extra-pages/blanche.html
+++ b/vidqua/extra-pages/blanche.html
@@ -1,3 +1,3 @@
 <script>
-  window.location.replace("https://bit.ly/49TFB8b");
+  window.location.replace("https://drive.google.com/drive/u/2/my-drive");
 </script>
